--- a/package.json
+++ b/package.json
@@ -19,10 +19,28 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "@types/styled-components": "^5.1.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react-app": "^6.2.2",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
+    "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0",
+    "stylelint": "^13.3.3",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-prettier": "^1.1.2",
+    "stylelint-processor-styled-components": "^1.10.0",
     "ts-loader": "^7.0.2",
     "typescript": "^3.8.3"
   },
