--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,15 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "jsx": "react",
-    "target": "es5",
-    "types": ["react"],
-    "lib": ["es5", "es6", "es7", "es2017", "es2018", "dom", "esnext"],
-    "outDir": "./dist",
+    "rootDirs": ["src", "stories"],
+    "outDir": "./dist/",
     "sourceMap": true,
-    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "noEmit": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "target": "es6",
+    "types": ["react"],
+    "jsx": "react",
     "strict": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
@@ -19,12 +17,7 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
