--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,3 @@
 {
-  "presets": [["react-app", { "flow": false, "typescript": true }]]
+  "presets": [["@babel/preset-env", "@babel/preset-react", "react-app", { "flow": false, "typescript": true }]]
 }
