--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frey-dates",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "author": "Yuta07 <yutazon.me@gmail.com>",
   "description": "",
   "homepage": "https://github.com/Yuta07/frey-dates#readme",
@@ -45,6 +45,7 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react-app": "^6.2.2",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "moment": "^2.25.3",
@@ -52,7 +53,7 @@
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.13.1",
     "storybook-readme": "^5.0.8",
-    "styled-components": "^5.1.0",
+    "styled-components": "4.4.1",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^20.0.0",
@@ -68,7 +69,7 @@
     "moment": "^2.24.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "build": "webpack",
@@ -88,6 +89,5 @@
       "eslint --fix",
       "git add"
     ]
-  },
-  "dependencies": {}
+  }
 }
