--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
   "name": "frey-dates",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.0",
+  "author": "Yuta07 <mono.12dev@gmail.com>",
+  "description": "",
+  "homepage": "https://github.com/Yuta07/frey-dates#readme",
+  "main": "./dist/index.js",
+  "types": "./types/frey-dates/index.d.ts",
+  "files": [
+    "dist",
+    "types"
+  ],
+  "bugs": {
+    "url": "https://github.com/Yuta07/frey-dates/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yuta07/frey-dates.git"
+  },
+  "license": "MIT",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -13,13 +30,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "tsc",
+    "build:watch": "tsc -w",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +52,58 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-a11y": "^6.0.25",
+    "@storybook/addon-actions": "^6.0.25",
+    "@storybook/addon-essentials": "^6.0.25",
+    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-knobs": "^6.0.25",
+    "@storybook/addon-links": "^6.0.25",
+    "@storybook/addon-storyshots": "^6.0.25",
+    "@storybook/addons": "^6.0.25",
+    "@storybook/node-logger": "^6.0.25",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.25",
+    "@types/moment": "^2.13.0",
+    "@types/storybook__addon-info": "^5.2.2",
+    "@types/storybook__addon-storyshots": "^5.3.1",
+    "@types/storybook__react": "^5.2.1",
+    "@types/styled-components": "^5.1.3",
+    "babel-loader": "^8.1.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "moment": "^2.29.0",
+    "prettier": "^2.1.2",
+    "react-is": "^16.13.1",
+    "styled-components": "^5.2.0",
+    "stylelint": "^13.7.2",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-prettier": "^1.1.2",
+    "stylelint-processor-styled-components": "^1.10.0",
+    "ts-loader": "^8.0.4",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
+  },
+  "peerDependencies": {
+    "moment": "^2.24.0",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "styled-components": "^5.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts, tsx}": [
+      "eslint --fix",
+      "git add"
     ]
   }
 }
