--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "frey-dates",
-  "version": "0.2.0",
-  "author": "Yuta07 <mono.12dev@gmail.com>",
+  "name": "frey-date",
+  "version": "0.2.1",
+  "author": "yuta07 <mono.12dev@gmail.com>",
   "description": "",
   "homepage": "https://github.com/Yuta07/frey-dates#readme",
-  "main": "./dist/index.js",
-  "types": "./types/frey-dates/index.d.ts",
+  "main": "./dist/components/FreyDates.js",
+  "types": "./dist/types/index.d.ts",
   "files": [
-    "dist",
-    "types"
+    "dist"
   ],
   "bugs": {
     "url": "https://github.com/Yuta07/frey-dates/issues"
@@ -30,7 +29,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "^4.0.3"
+    "typescript": "3.9.5"
   },
   "scripts": {
     "build": "tsc",
@@ -72,7 +71,12 @@
     "@types/storybook__addon-storyshots": "^5.3.1",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "babel-loader": "^8.1.0",
+    "eslint": "^7.10.0",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "moment": "^2.29.0",
