--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
-    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "commonjs",
+    "target": "es6",
+    "lib": ["es6", "dom", "es2016", "es2017"],
     "moduleResolution": "node",
     "jsx": "react",
     "outDir": "./dist",
     "strict": true,
-    // "allowJs": true,
-    // "resolveJsonModule": true,
-    // "isolatedModules": true,
-    // "noEmit": true,
+    "sourceMap": true,
+    "allowJs": false,
+    "declaration": true,
     "skipLibCheck": true,
     "noImplicitReturns": true,
     "noImplicitAny": true,
@@ -22,5 +21,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*", "src/**/**/*.ts"],
-  "exclude": ["node_modules", "src/stories/**/*.stories.tsx", "src/shared/**/*.ts"]
+  "exclude": ["node_modules", "src/stories/**/*.stories.tsx", "src/shared/**/*.ts", "dist"]
 }
